<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">e-reader-dict</string>
    <string name="page">стр.</string>
    <string name="no_book_message">Не выбрана книга</string>
    <string name="books">Ваши книги</string>
    <string name="cancel_add_book">Закрыть меню выбора книги</string>
    <string name="add_book">Добавить книгу</string>
    <string name="learn">Обучение</string>
    <string name="no_words_message">Нет слов для повторения</string>
    <string name="show_translation">Показать перевод</string>
    <string name="remembered">Помнил</string>
    <string name="forgot">Забыл</string>
    <string name="history">История переводов</string>
    <string name="topage">Перейти на страницу</string>
    <string name="page_number">Номер страницы</string>
    <string name="go">Перейти</string>
    <string name="about">Справка</string>
    <string name="sellout">Оставить отзыв в Play Market!</string>
    <string name="about_text">
        Версия: 1.0.0.23\n\n
        Программисты:\n
        Кравченко Иван\n
        Ионченкова Мария\n
        Куликова Елена\n
        \n
        Дизайнеры:\n
        Кравченко Иван\n
        \n
        E-mail для отзывов и предложений:\n
        mylo@mylo.mylo\n
    </string>
    <string name="nopage">Туда листать нельзя!</string>
    <string name="loadtxt">Подождите, идет разделение книги на страницы...</string>
    <string name="loadepub">Подождите, идет разделение главы</string>
    <string name="of">из</string>
    <string name="topages">на страницы...</string>
    <string name="translate">Перевести</string>
    <string name="cancel">Отмена</string>
    <string name="translates_to">=</string>
    <string name="yandex_key">trnsl.1.1.20161018T161515Z.824fbc26059b6559.9e9ec70413f874a1a9a110795b060e063eb0c65b</string>
    <string name="yandex_url">https://translate.yandex.net/api/v1.5/tr.json/translate</string>
    <string name="start_learning">Учить</string>
    <string name="already_learning">Уже в списке</string>
    <string name="reset">Сброс</string>
    <string name="version">1.0.0.23</string>
</resources>
